# fastmcp-playground

./: .gitignore  README.md  docker-compose.yaml  main.py  pyproject.toml
app/: __init__.py  server.py
app/auth/: __init__.py  setup.py
app/config/: __init__.py
app/routes/: __init__.py
app/tools/: auth.py
data/: sample-data.json
mcp/: main.py  pyproject.toml
mcp/app/: __init__.py  server.py
mcp/app/auth/: __init__.py  setup.py
mcp/app/config/: __init__.py  oidc.py  settings.py
mcp/app/icons/: __init__.py
mcp/app/middleware/: __init__.py  authorization.py
mcp/app/resources/: __init__.py  portfolio.py
mcp/app/routes/: __init__.py  health.py
mcp/app/tools/: __init__.py  auth.py  base.py  basic.py  portfolio.py  sandbox.py
portfolio-api/: README.md  main.py  pyproject.toml
